--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,8 +9,8 @@
   >
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="input">Input Debouncer</a>
-      <a mat-list-item href="debounce-http">Http Request Cache</a>
+      <a mat-list-item routerLink="input">Input Debouncer</a>
+      <a mat-list-item routerLink="debounce-http">Http Request Cache</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
